# fragments

./: .gitignore  README.md  fragments.cabal  lit.md
agdments/: README.md
agdments/src/: hello.agda
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
dist-newstyle/packagedb/ghc-8.10.7/: fragments-0.1.0.0-inplace.conf  package.cache
fragments/: fragments.cabal
fragments/Semantics/Logic/: Propositional.hs
fragments/lib/Semantics/: Prelude.hs
fragments/lib/Semantics/Fragment/: Assertion.hs  DynamicSem.hs  Presupposition.hs
fragments/lib/Semantics/Fragment/EnrichSem/: Full.hs
fragments/lib/Semantics/Fragment/IntenSem/: Full.hs
fragments/lib/Semantics/Fragment/InvFormSem/: Full.hs
fragments/lib/Semantics/Functional/: Optics.hs
fragments/lib/Semantics/Hyperintension/: ImpossibleWorlds.hs  TwoDimensionalSem.hs
fragments/lib/Semantics/Logic/: DirectRep.hs  Propositional.hs
haskell/: CHANGELOG.md  fragments.cabal
haskell/lib/: README.md
haskell/lib/Semantics/Fragment/: Implicature.hs
haskell/lib/Semantics/Fragment/CompSemFunPro/: Full.hs
haskell/lib/Semantics/Fragment/Continuations/: Full.hs
haskell/lib/Semantics/Fragment/SemGenGram/: Full.hs
haskell/lib/Semantics/Functional/: AlgebraicEffects.hs  RecursionSchemes.hs
haskell/lib/Semantics/Hyperintension/: Aboutness.hs  HoTT.hs  Monadic.hs  StructuredProp.hs
haskell/lib/Semantics/Logic/: Domains.hs  IndirectRep.hs
lib/Semantics/Logic/: Propositional.hs  PropositionalInteractive.hs  PropositionalModal.hs  PropositionalSemantics.hs  PropositionalSyntax.hs  Quantificational.hs  QuantificationalInteractive.hs  QuantificationalSemantics.hs  QuantificationalSyntax.hs
lib/Semantics/Logic/Propositional/: Interactive.hs  Parsing.hs  PrettyPrinting.hs  Semantics.hs  Syntax.hs
lib/Semantics/Logic/PropositionalModal/: Interactive.hs  Parsing.hs  PrettyPrinting.hs  Semantics.hs  Syntax.hs
lib/Semantics/Logic/Quantificational/: Interactive.hs  Parsing.hs  PrettyPrinting.hs  Semantics.hs  Syntax.hs
lib/Semantics/Logic/QuantificationalModal/: Syntax.hs
test/: MyLibTest.hs
test/Logic/: Prop.hs  PropModal.hs  Quant.hs
