cabal-version:      2.4
name:               fragments
version:            0.1.0.0
synopsis:           Formal Semantics via Functional Programming

-- A longer description of the package.
-- description:
homepage:           kripkesbeard.github.io

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Peter Fortin
maintainer:         kripkesbeard@gmail.com

-- A copyright notice.
-- copyright:
category:           Semantics
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Semantics.Logic.Propositional
                      Semantics.Logic.Propositional.Syntax
                      Semantics.Logic.Propositional.Semantics
                      Semantics.Logic.Propositional.Interactive
                      Semantics.Logic.PropositionalModal
                      Semantics.Logic.PropositionalModal.Syntax
                      Semantics.Logic.PropositionalModal.Semantics
                      Semantics.Logic.PropositionalModal.Interactive
                      Semantics.Logic.Quantificational
                      Semantics.Logic.Quantificational.Syntax
                      Semantics.Logic.Quantificational.Semantics
                      Semantics.Logic.Quantificational.Interactive
                      --Semantics.Logic.QuantificationalModal
                      --Semantics.Logic.QuantificationalModal.Syntax
                      --Semantics.Logic.QuantificationalModal.Semantics
                      --Semantics.Logic.QuantificationalModal.Interactive
                      --Semantics.Logic.TheoryOfTypes
                      --Semantics.Logic.IntensionalTypeTheory


    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
                    , text 
                    , containers 
                    , parsec 
                    , mtl 
                      
    hs-source-dirs:   lib
    default-language: Haskell2010
    ghc-options: -Wall

test-suite fragments-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:    base ^>=4.14.3.0
