cabal-version:      2.4
name:               fragments
version:            0.1.0.0
synopsis:           Formal Semantics via Functional Programming

-- A longer description of the package.
description:  . 
                This library is an exploration of formal semantics via functional programming. 
                It contains a framework of foundational logics in which to implement and test
                different ideas in natural language semantics, especially those involving functional 
                programming techniques and tools.
              . 
                The Semantics.Logic modules contain the foundational logics of the system. 
              . 
                The Semantics.Fragments modules contain implementations of Montague style natural language semantics. 
              .  
                The Semantics.Hyperintensional contains experiments with hyperintensional logics to model 
                propositional attitude reports and logical necessity in natural language. The 
              . 
                The Semantics.Functional modules contain experiments using techniques like recursion schemes and optics
                to model natural language phenomena.

homepage:           kripkesbeard.github.io

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Peter Fortin
maintainer:         kripkesbeard@gmail.com

-- A copyright notice.
-- copyright:
category:           Semantics
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Semantics.Logic.Propositional
                      Semantics.Logic.Propositional.Syntax
                      Semantics.Logic.Propositional.Semantics
                      Semantics.Logic.PropositionalModal
                      Semantics.Logic.PropositionalModal.Syntax
                      Semantics.Logic.PropositionalModal.Semantics
                      Semantics.Logic.Quantificational
                      Semantics.Logic.Quantificational.Syntax
                      Semantics.Logic.Quantificational.Semantics
                      --Semantics.Logic.QuantificationalModal
                      --Semantics.Logic.QuantificationalModal.Syntax
                      --Semantics.Logic.QuantificationalModal.Semantics
                      --Semantics.Logic.TypeTheoretic
                      --Semantics.Logic.TypeTheoreticModal


    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
                    , containers 
                    , parsec 
                    , parsec-numbers
                    , mtl 
                      
    hs-source-dirs:   lib
    default-language: Haskell2010
    ghc-options: -Wall

test-suite fragments-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:    base ^>=4.14.3.0
